@@ -2,7 +2,7 @@
 # Kernel/Modules/Installer.pm - provides the DB installer
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: Installer.pm,v 1.78 2010-08-27 19:07:11 mb Exp $
+# $Id: Installer.pm,v 1.79 2010-09-02 12:20:47 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::System::Email;
 use Kernel::System::MailAccount;
 
 use vars qw($VERSION %INC);
-$VERSION = qw($Revision: 1.78 $) [1];
+$VERSION = qw($Revision: 1.79 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -593,6 +593,16 @@ sub Run {
         # take care that default config file is existing
         if ( !$SysConfigObject->WriteDefault() ) {
             return $Self->{LayoutObject}->FatalError();
+        }
+
+        # install default files
+        if ( $Self->{MainObject}->Require('Kernel::System::Package') ) {
+            my $PackageObject = Kernel::System::Package->new(
+                %{$Self}
+            );
+            if ($PackageObject) {
+                $PackageObject->PackageInstallDefaultFiles();
+            }
         }
 
         my %SystemIDs;
